--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,9 @@
 
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+  <link rel="shortcut icon" href="logo.ico" />
 
-  <title>to.do</title>
+  <title>My Checklist</title>
 </head>
 <body>
   <div id="root"></div>
